jumping issue

--- a/style.css
+++ b/style.css
@@ -1140,6 +1140,7 @@ a.explore:hover {
     line-height: 35px;
     font-size: 18px;
 }
+
 /***********************************************************************************************************/
 article.type-post {
     margin-bottom: 0;
@@ -1277,6 +1278,13 @@ article.type-post {
 }
 .blog-post  li:first-of-type i.fa-pencil{
     margin-left: 0 !important;
+}
+
+
+
+#entry_footer .caption i.fa {
+    color: #333;
+    font-size: 15px;
 }
 /***********************************************************************************************************/
 
@@ -1829,8 +1837,8 @@ h2.widgettitle {
 .widget_nav_menu  .menu-item-has-children:after{
     content: none;
 }
-.widget_nav_menu.sidebar-widget li::before{
-    content: "\f105";
+.widget_nav_menu.sidebar-widget li::before {
+    content: "\f0da";
 }
 .sidebar-widget li::before {
     content:"\f0da";
@@ -1901,17 +1909,11 @@ h2.widgettitle {
     font-size: 14px;
 }
 #entry_footer .share a {
-    display: inline-block;
-    text-transform: uppercase;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    font-size: 13px !important;
-    transition: all .3s;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
+    margin-right: 10px;
 }
 
 #entry_footer  .share {
@@ -1926,6 +1928,9 @@ h2.widgettitle {
     padding: 6px 13px;
     display: inline-block;
     margin-bottom: 10px;
+}
+.widget_nav_menu .sub-menu .menu-item-has-children:after{
+    opacity: 0;
 }
 
 /* test */
@@ -2146,9 +2151,28 @@ input[type="search"],
 input[type="tel"],
 input[type="time"],
 input[type="week"]{
-
-
+    height: 35px;
+    border: 1px solid #ddd;
+}
+button,
+input[type="submit"],
+input[type="button"]{
+    background: #295970;
+    color: #fff;
 }
 
-
-
+input::-webkit-input-placeholder,
+input:-moz-placeholder ,
+input:-ms-input-placeholder ,
+input[placeholder]{
+    color: #ddd ;
+}
+input:focus,
+textarea:focus {
+    border-color: #95E1D3;
+}
+button:hover,
+input[type="submit"]:hover,
+input[type="button"]:hover{
+    background: #333;
+}
